--- a/craft_sicherungWebsite/templates/fuerSie/index.html
+++ b/craft_sicherungWebsite/templates/fuerSie/index.html
@@ -17,7 +17,7 @@
 
 <div class="container-fluid text-center no-padding" id="ersterContainer" style="padding-top: 7rem; position: relative;">
 
-  <img id="headerbild" src="{{ craft.assets.filename('chance-ev-fuer-sie-header.jpg').one().getUrl() }}" >
+  <img id="headerbild" style="object-position: 50% 10%;" src="{{ craft.assets.filename('chance-ev-fuer-sie-header.jpg').one().getUrl() }}" >
 
   <nav aria-label="breadcrumb" id="info" style="padding-top: 4rem;">
   <ol class="breadcrumb">
@@ -136,7 +136,7 @@
       <div class="col-md-7" style="padding-left: 30px;">
         <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
         <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
-        <a href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
+        <a href="https://aufbau-website.de/craft/web/spenden/jetztspenden.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
       </div>
     </div>
   </div> <!-- Der orange Berg mit dem Spendenaufruf -->
