--- a/craft_sicherungWebsite/templates/fuerSie/chancekommt.html
+++ b/craft_sicherungWebsite/templates/fuerSie/chancekommt.html
@@ -39,18 +39,8 @@ h3 { padding-bottom: 1rem; }
 
 <div class="container-fluid no-padding style" style="background-color: white; padding-bottom: 5rem; padding-top: 5rem;">
 
-  <div class="container achterspaltenlayout" id="copy">
-    <div class="row">
-      <div class="col-md-6" style="padding: 0 2rem;">
-        {{ entry.zusatzfeld1 }}
-      </div>
-      <div class="col-md-6" style="padding: 0 2rem;">
-        {{ entry.text }}
-      </div>
-    </div>
-  </div>
 
-  <div class="container achterspaltenlayout" id="copy" style="padding-bottom: 4rem;">
+  <div class="container achterspaltenlayout" id="anleser" style="padding-bottom: 4rem;">
     {{ entry.zusatzfeld2 }}
   </div>
 
