--- a/craft_sicherungWebsite/templates/_layouts/weiterleitungmitzeilenumbruch.html
+++ b/craft_sicherungWebsite/templates/_layouts/weiterleitungmitzeilenumbruch.html
@@ -1,16 +1,8 @@
 
-{% set url = entry.url %}
-
-
-{% if 'erfahrungsberichte' in entry.url %}
-{% set url = entry.url |replace({'erfahrungsberichte': 'programme'}) %}
-{% endif %}
-
-
 <div class="zwoelferspaltenlayout container text-left" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 2.5rem;">
 <div class="row">
   <div class="col-md-4" style="padding: 0;">
-    <a href="{{url}}">
+    <a href="{{ entry.reinertext }}">
     <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
   </a>
   </div>
