--- a/craft_sicherungWebsite/templates/blog/_entry/blogeintrag.html
+++ b/craft_sicherungWebsite/templates/blog/_entry/blogeintrag.html
@@ -25,6 +25,7 @@
   <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/blog">Blog</a></li>
+    <li class="breadcrumb-item"> {{entry.title }} </li>
   </ol>
 </nav>
 
