--- a/craft_sicherungWebsite/templates/fuerSie/freiwillig/erfahrungsberichte.html
+++ b/craft_sicherungWebsite/templates/fuerSie/freiwillig/erfahrungsberichte.html
@@ -45,7 +45,7 @@
             <p class="card-text">
               <h3> {{ entry.title }} </h3>
               <div id="copy"> {{ entry.anleser }}
-              <a href="{{ 'https://aufbau-website.de/craft/web/freiwilligenberichte/' ~ entry.slug }}"> Mehr erfahren</a>
+              <a href="{{ 'https://aufbau-website.de/craft/web/freiwilligenberichte/' ~ entry.slug }}"> Mehr erfahren > </a>
               </div>
             </p>
           </div>
