--- a/craft_sicherungWebsite/templates/index.html
+++ b/craft_sicherungWebsite/templates/index.html
@@ -24,7 +24,7 @@
 <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-home-header.jpg').one().getUrl() }} " >
 
   <div class="container achterspaltenlayout" id="video">
-
+<iframe src="https://www.youtube.com/embed/HQxVX1oX5dE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
 <div class="container achterspaltenlayout text-center" style="padding-top: 5rem;">
@@ -103,12 +103,13 @@
 
   <style>
     .reiter {
-      width: 40%;
-      font-size: 12px;
-      height: 35px;
-      margin-top: -61px;
-      margin-left: 15px;
-    }
+    width: 40%;
+    font-size: 12px;
+    height: 25px;
+    margin-top: -51px;
+    margin-left: 15px;
+    line-height: 14px;
+  }
     .card {
       margin: 0 5px;
     }
