--- a/craft_sicherungWebsite/templates/projekte/_entry/empfehlungeinzeln.html
+++ b/craft_sicherungWebsite/templates/projekte/_entry/empfehlungeinzeln.html
@@ -14,7 +14,8 @@
   <nav aria-label="breadcrumb" id="info">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/ueberUns">Über Uns</a></li>
-      <li class="breadcrumb-item"> Empfehlungen</li>
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/ueberUns/empfehlungen.html">Über Uns</a></li>
+      <li class="breadcrumb-item"> {{ entry.title }} </li>
     </ol>
   </nav>
 
