--- a/craft_sicherungWebsite/templates/projekte/_entry/freiwilligenberichte.html
+++ b/craft_sicherungWebsite/templates/projekte/_entry/freiwilligenberichte.html
@@ -12,7 +12,7 @@
     <ol class="breadcrumb">
       <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie">Für Sie</a></li>
       <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie/freiwilligendienst.html">Freiwilligendienst</a></li>
-      <li class="breadcrumb-item"> Erfahrungsberichte </li>
+      <li class="breadcrumb-item"> {{ entry.title }} </li>
     </ol>
   </nav>
 
