--- a/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
@@ -10,7 +10,7 @@
 {% block block1 %}
 <div class="container-fluid text-center" style="padding-top: 9rem; position: relative;" id="start">
 
-  <nav aria-label="breadcrumb" id="info">
+<nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
     <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte/programme.html">Programme</a></li>
@@ -26,7 +26,6 @@
       sondern das Potential der Dorfbewohner, das wir konsequent fördern. </p>
   </div>
 
-  <span id="klicker" onclick="zeigeBreadcrumb()"> Übersicht der Inhalte</span>
       <nav id="myScrollspy">
     <ul class="nav nav-pills flex-column">
          <li class="nav-item">   <a class="nav-link active" href="#start"> <span>Dorfentwicklung</span> </a> </li>
@@ -38,11 +37,7 @@
   </nav>
   </div>
 
-  <script type="text/javascript">
-function zeigeBreadcrumb() {
-  $('#myScrollspy span').show();
-}
-  </script>
+<a class="btn btn-primary wandernderButton" href="https://aufbau-website.de/craft/web/spenden/patewerden.html#pills-profile1">Dorfpate werden</a>
 
   <div class="container zwoelferspaltenlayout" style="padding-top: 2rem;">
     <div class="row">
