--- a/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -24,6 +24,8 @@
   </ul>
 </nav>
 
+<a class="btn btn-primary wandernderButton" href="https://aufbau-website.de/craft/web/spenden/patewerden.html#pills-profile3">Waldpate werden</a>
+
 <div class="container-fluid text-center" style="padding-top: 7rem; position: relative;" id="start">
 
   <nav aria-label="breadcrumb" id="info">
