--- a/craft_sicherungWebsite/templates/spenden/index.html
+++ b/craft_sicherungWebsite/templates/spenden/index.html
@@ -8,11 +8,11 @@
 
 {% block headerbildPosition1 %}
 
-<div class="container-fluid no-padding" style="padding-top: 70px; background-color: #ee6e2d;">
+<div class="container-fluid no-padding" style="padding-top: 4rem; background-color: #ee6e2d;">
 
 </div>
 
-  <img class="img-fluid" id="headerbild" src=" {{ craft.assets.filename('chance-spenden-header.jpg').one().getUrl() }} ">
+  <img class="img-fluid" style="padding-bottom: 1rem;" id="headerbild" src=" {{ craft.assets.filename('chance-spenden-header.jpg').one().getUrl() }} ">
 
 {% endblock %}
 
