--- a/craft_sicherungWebsite/templates/spenden/patewerden.html
+++ b/craft_sicherungWebsite/templates/spenden/patewerden.html
@@ -13,8 +13,7 @@
   <nav aria-label="breadcrumb" id="info">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/spenden">Spenden</a></li>
-      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen.html"> Projektbezogen Spenden</a></li>
-      <li class="breadcrumb-item"> Projektbezogen Regelmäßig Spenden </li>
+      <li class="breadcrumb-item"> Pate werden </li>
     </ol>
   </nav>
 
@@ -23,7 +22,7 @@
   <div class="container achterspaltenlayout" style="padding-top:0px; padding-bottom: 5rem; position: relative;">
     {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
     <div>
-      <h1 style="padding-bottom: 3rem;"> {{ entry.anleser }}  </h1>
+      <h1 style="padding-bottom: 2rem;"> {{ entry.anleser }}  </h1>
     </div>
   </div>
 </div>
