--- a/craft_sicherungWebsite/templates/fuerSie/freiwilligendienst.html
+++ b/craft_sicherungWebsite/templates/fuerSie/freiwilligendienst.html
@@ -37,7 +37,7 @@
           {% set counter = counter + 1 %}
           <div class="col-lg-4 col-md-6" style="padding-bottom: 40px; padding-left: 5px; padding-right: 5px;">
           <div class="card border-light h-100">
-            <a href="{{'https://aufbau-website.de/craft/web/fuerSie/freiwillig/' ~ entry.slug}}">
+            <a href="{{ entry.reinertext }}">
             <img class="card-img-top"
             src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
             </a>
