--- a/craft_sicherungWebsite/templates/fuerSie/index.html
+++ b/craft_sicherungWebsite/templates/fuerSie/index.html
@@ -15,11 +15,11 @@
 }
 </style>
 
-<div class="container-fluid text-center no-padding" id="ersterContainer" style="padding-top: 7rem; position: relative;">
+<div class="container-fluid text-center no-padding" id="ersterContainer" style="padding-top: 1rem; position: relative;">
 
   <img id="headerbild" style="object-position: 50% 10%;" src="{{ craft.assets.filename('chance-ev-fuer-sie-header.jpg').one().getUrl() }}" >
 
-  <nav aria-label="breadcrumb" id="info" style="padding-top: 4rem;">
+  <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
     <li class="breadcrumb-item">Für Sie</a></li>
   </ol>
