--- a/craft_sicherungWebsite/templates/fuerSie/presse.html
+++ b/craft_sicherungWebsite/templates/fuerSie/presse.html
@@ -49,7 +49,7 @@
 
   <div class="container zwoelferspaltenlayout text-center" style="padding-top: 0;">
     <hr style="margin-bottom: 3rem; margin-top: 5rem;">
-   <div id="copy" style="padding-bottom: 3rem;"> Das könnte Sie auch interessieren</div>
+   <div id="anleser" style="padding-bottom: 3rem;"> Das könnte Sie auch interessieren</div>
   </div>
 
   {% set entry = craft.entries.section('fuerSie').slug('literaturtipps').one() %}
