--- a/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
@@ -18,6 +18,8 @@
   </ul>
 </nav>
 
+<a class="btn btn-primary wandernderButton" href="https://aufbau-website.de/craft/web/spenden/patewerden.html#pills-profile2">Kinderpate werden</a>
+
 <div class="container-fluid text-center" style="padding-top: 150px; position: relative;" id="start">
 
   <nav aria-label="breadcrumb" id="info">
