fertig ausarbeiten der vorschläge

--- a/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -79,8 +79,8 @@
                 <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/projekte/wowirarbeiten.html"> Wo wir arbeiten</a> </li>
                 <li class="dropdown-divider"></li>
                 <li class="dropdown-submenu">
-                  <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/programme.html">Programme</a>
-                  <ul class="dropdown-menu">
+                  <a  class="dropdown-item obermenu" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/programme.html">Programme</a>
+                  <ul class="dropdown-menu ausklappbar">
                     <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/programme/dorfentwicklung.html">Dorfentwicklung</a></li>
                     <li class="dropdown-divider"></li>
                     <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/projekte/programme/kinderpate.html">Kinderpaten</a></li>
