--- a/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
@@ -37,7 +37,7 @@
   </nav>
   </div>
 
-<a class="btn btn-primary wandernderButton" href="https://aufbau-website.de/craft/web/spenden/patewerden.html#pills-profile1">Dorfpate werden</a>
+<a class="btn btn-primary wandernderButton" href="https://aufbau-website.de/craft/web/spenden/patewerden.html#dorf">Dorfpate werden</a>
 
   <div class="container zwoelferspaltenlayout" style="padding-top: 2rem;">
     <div class="row">
