--- a/craft_sicherungWebsite/templates/ueberUns/index.html
+++ b/craft_sicherungWebsite/templates/ueberUns/index.html
@@ -9,7 +9,7 @@
 {% block headerbildPosition1 %}
 
 <div class="container-fluid no-padding" style="padding-top: 5rem;">
-  <img class="img-fluid mx-auto d-block" src="{{ craft.assets.filename('chance-ueber-uns-header.jpg').one().getUrl() }}" style="padding-bottom: 0">
+  <img id="headerbild" src="{{ craft.assets.filename('chance-ueber-uns-header.jpg').one().getUrl() }}" style="padding-bottom: 0">
 </div>
 
 
