--- a/craft_sicherungWebsite/templates/kontakt/dankespende.html
+++ b/craft_sicherungWebsite/templates/kontakt/dankespende.html
@@ -3,48 +3,57 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; position: relative;">
+<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; position: relative;">
+
+  <nav aria-label="breadcrumb" id="info">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"> Jetzt Spenden </li>
+    </ol>
+  </nav>
+
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
-  <div class="container achterspaltenlayout text-center" style="padding-top:0px;">
+  <div class="container achterspaltenlayout text-center" style="padding-top: 0; padding-bottom: 0;">
     {% set entry = craft.entries.section('kontakt').slug('interessieren').one() %}
-    <div style="padding-bottom:50px; ">
-      <h1 style="padding-bottom: 30px;"> Vielen Dank für ihre Spende! </h1>
-      <div id="anleser"> Vielleicht finden sie auf den folgenden Seiten mehr inspirierende Inhalte. </div>
-      </div>
-    </div>
+      <h1 style="padding-bottom: 2rem;"> Vielen Dank für ihre Spende! </h1>
+    <img class="img-fluid" style="padding-bottom: 0;" src="{{ craft.assets.filename('chance-ev-spenden-teaser-junge.png').one().getUrl() }}">
   </div>
 
-
-<div class="container-fluid no-padding" style="background-color: white">
-
-  {% set entry = craft.entries.section('projekte').slug('projekte').one() %}
-
-  <div class="zwoelferspaltenlayout container" style="padding-top: 0px; padding-bottom: 4rem;">
-  <div class="row" style="background-color: #f8f5f2;">
-    <div class="col-md-4">
-      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
-    </div>
-    <div class="col-md-8" style="padding-top: 2rem;">
-      <h3> {{ entry.title }} </h3>
-      <div id="copy"> {{ entry.anleser }}</div>
-    </div>
-</div> <!-- Weitere Informationen zum Projekt -->
-
-
-  {% set entry = craft.entries.section('spendenfelderUndSo').slug('fuer-sie').one() %}
-
-  <div class="row" style="background-color: #f8f5f2; margin-top: 2rem;">
-    <div class="col-md-4">
-      <img class="img-fluid mx-auto d-block" style="padding-bottom: 0px; max-height: 250px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
-    </div>
-    <div class="col-md-8" style="padding-top: 2rem;">
-      <h3> {{ entry.title }} </h3>
-      <div id="copy"> {{ entry.text }}</div>
-    </div>
-  </div><!-- Weitere Informationen zum Konzept -->
-
-  </div>
 </div>
 
+<div class="container-fluid no-padding" style="background-color: white;">
+  <div class="container zwoelferspaltenlayout">
+    <div class="row">
+      <div class="col-6">
+        <h3> Freundesbrief abbonnieren <h3>
+          <p id="anleser"> Lassen Sie sich ungefähr einmal monatlich durch unseren kostenfreien
+            Freundesbrief „Chance-Aktuell“ informieren. </p>
+      </div>
 
-{% endblock %}
+      <div class="col-6">
+          {% include '_layouts/codeschnipsel/macrokontakt' %}
+          {% from _self import errorList %}
+          <form class="form-inline" method="post" action="" accept-charset="UTF-8">
+            {{ csrfInput() }}
+            <input type="hidden" name="action" value="contact-form/send">
+            {{ redirectInput('kontakt/danke') }}
+
+            <input id="from-email" required class="form-control" type="email" style="padding-top: 9px; background-color: white; margin-right: 1rem; padding-right: 3rem;" name="fromEmail" placeholder="Ihre E-Mail-Adresse" value="{{ message.fromEmail ?? '' }}">
+            {{ message is defined and message ? errorList(message.getErrors('fromEmail')) }}
+            <input type="submit" value="Anmelden" class="btn btn-primary" style="line-height: 16px;  padding-top: 11px; padding-bottom: 9px;">
+
+            <textarea style="display: none;" rows="10" cols="40" id="message" name="message">Die oben genannte E-Mail-Adresse würde sich gerne für den Newsletter anmelden.</textarea>
+            {{ message is defined and message ? errorList(message.getErrors('message')) }}
+
+          </form>
+
+          <p style="padding-top: 2rem; margin-bottom: 0;" id="copy"> Zweimal im Jahr versenden wir zusätzlich einen detaillierten Freundesbrief mit der Post.
+            <br> <a href="https://aufbau-website.de/craft/web/kontakt">Melden Sie sich hier für unseren ausführlichen Freundesbrief an. > </a>
+          </div>
+        </div>
+
+        </div>
+      </div>
+    </div>
+
+
+    {% endblock %}
