--- a/craft_sicherungWebsite/templates/projekte/_entry/freiwilligenberichte.html
+++ b/craft_sicherungWebsite/templates/projekte/_entry/freiwilligenberichte.html
@@ -43,7 +43,7 @@
 
       {% for entry in entries %}
       {% if entry.slug != ursprungseintrag %}
-      <div class="card">
+      <div class="card" style="border: 10px solid #f8f5f2;">
             <div class="row">
               <div class="col-4">
                  <span class="helper" style="display: inline-block; height: 100%; vertical-align: middle;"></span>
@@ -56,7 +56,7 @@
                     <p class="card-text">
                       <h4 style="margin: 0;"> {{ entry.title }} </h4>
                       <div id="copy">
-                        <a href="{{ 'https://aufbau-website.de/craft/web/freiwilligenberichte/' ~ entry.slug }}"> Mehr erfahren</a>
+                        <a href="{{ 'https://aufbau-website.de/craft/web/freiwilligenberichte/' ~ entry.slug }}"> Mehr erfahren > </a>
                       </div>
                     </p>
                   </div>
@@ -73,7 +73,7 @@
     border-width: 0;
   }
 </style>
-{% include '_layouts/codeschnipsel/spendenaufrufkindrund' %}
+{% include '_layouts/codeschnipsel/spendekindrundeinbutton' %}
 
 
 <div class="container-fluid no-padding" style="background-color: white; padding-top: 0; padding-bottom: 5rem;">
