--- a/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -24,7 +24,7 @@
   </ul>
 </nav>
 
-<a class="btn btn-primary wandernderButton" href="https://aufbau-website.de/craft/web/spenden/patewerden.html#pills-profile3">Waldpate werden</a>
+<a class="btn btn-primary wandernderButton" href="https://aufbau-website.de/craft/web/spenden/patewerden.html#wald">Waldpate werden</a>
 
 <div class="container-fluid text-center" style="padding-top: 7rem; position: relative;" id="start">
 
@@ -103,7 +103,7 @@
 {% set entry = craft.entries.section('projekte').slug('waldpate-werden').one() %}
 
 <div class="container-fluid"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
-  <div class="row">
+  <div class="row" id="spende">
     <div class="col-md-1">  </div>
     <div class="col-md-3">   <img  style="position: relative; top: 50%; transform: translateY(-50%);" class="img-fluid mx-auto d-block" src="{% if entry.bild.inReverse().one() is not null %}  {{ entry.bild.inReverse().one().getUrl() }}  {% endif %}"> </div>
     <div class="col-md-7" style="padding-left: 30px;">
@@ -113,7 +113,7 @@
     </div>
   </div>
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
-
+<style media="screen"> #spende strong {   color: white;  } </style>
 
 <div class="container achterspaltenlayout text-center" style="padding-top: 5rem;">
   {% set entry = craft.entries.section('projekte').slug('regenwald').one() %}
@@ -168,7 +168,7 @@
     </div>
     {% endfor %}
   </div>
-  <a href="https://meinregenwald.de/"> <h3 style="color: #0062ae;"> Mehr Infos: www.meinregenwald.de </h3> </a>
+  <a target="_blank" href="https://meinregenwald.de/"> <h3 style="color: #0062ae;"> Mehr Infos: www.meinregenwald.de </h3> </a>
 </div>
 
 <div class="container achterspaltenlayout text-center" style="padding-top: 6rem; padding-bottom: 0;" id="gelingendesLeben">
@@ -178,7 +178,9 @@
 </div>
 
 <div class="container zwoelferspaltenlayout" style="padding-top: 0; padding-bottom: 5rem;">
+  <a target="_blank" href="https://meinregenwald.de/">
   <img class="img-fluid "src="{% if entry.bild.one() is not null %}{{ entry.bild.one().url }} {% endif %}">
+  </a>
 </div>
 
 <div class="container-fluid no-padding" style="background-color: white; padding-bottom: 2.5rem; padding-top: 0;">
