--- a/craft_sicherungWebsite/templates/spenden/patewerden.html
+++ b/craft_sicherungWebsite/templates/spenden/patewerden.html
@@ -33,16 +33,16 @@
       <div class="col-md-2">
         <ul class="nav nav-pills flex-column" id="pills-tab" role="tablist">
           <li class="nav-item">
-            <a class="nav-link active tab" style="padding: 1rem;" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Länderpate</a>
+            <a class="nav-link active tab land" style="padding: 1rem;" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Länderpate</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link tab" style="padding: 1rem;" id="pills-profile-tab" data-toggle="pill" href="#pills-profile1" role="tab" aria-controls="pills-profile" aria-selected="false">Dorfpate</a>
+            <a class="nav-link tab dorf" style="padding: 1rem;" id="pills-profile-tab" data-toggle="pill" href="#pills-profile1" role="tab" aria-controls="pills-profile" aria-selected="false">Dorfpate</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link tab" style="padding: 1rem;" id="pills-profile-tab" data-toggle="pill" href="#pills-profile2" role="tab" aria-controls="pills-profile" aria-selected="false">Kinderpate plus</a>
+            <a class="nav-link tab kind" style="padding: 1rem;" id="pills-profile-tab" data-toggle="pill" href="#pills-profile2" role="tab" aria-controls="pills-profile" aria-selected="false">Kinderpate plus</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link tab" style="padding: 1rem;" id="pills-profile-tab" data-toggle="pill" href="#pills-profile3" role="tab" aria-controls="pills-profile" aria-selected="false">Waldpate</a>
+            <a class="nav-link tab wald" style="padding: 1rem;" id="pills-profile-tab" data-toggle="pill" href="#pills-profile3" role="tab" aria-controls="pills-profile" aria-selected="false">Waldpate</a>
           </li>
         </ul>
       </div>
@@ -152,6 +152,16 @@
     padding-bottom: 0;
   }
 </style>
+
+<script type="text/javascript">
+var url = window.location.href;
+if (url.includes('#')) {
+    url = url.replace("https://aufbau-website.de/craft/web/spenden/patewerden.html#", "");
+    url = '.' + url;
+    $('.nav-link.tab').removeClass('active');
+    $(url).addClass('active');  
+  }
+</script>
 
 {% endblock %}
 {# Alles, was bis zu dem endblock-Tag kommt, überschreibt den Block in layoutHome #}
